package tp3;

public class PizzeriaDeStrasbourg extends Pizzeria {
	
	public PizzeriaDeStrasbourg() {
		this.FabriqueDePizza = FabriqueDePizzaDeStrasbourg.getInstance();
	}
	

}



