@startuml
abstract class FabriqueDePizza [[java:tp3.FabriqueDePizza]] {
	#{abstract}Pizza creerPizza(String type)
}
class FabriqueDePizzaDeBrest [[java:tp3.FabriqueDePizzaDeBrest]] {
	~{static}FabriqueDePizzaDeBrest instance
	+{static}FabriqueDePizzaDeBrest getInstance()
	+Pizza creerPizza(String type)
}
abstract class FabriqueDePizza [[java:tp3.FabriqueDePizza]] {
}
FabriqueDePizza <|-- FabriqueDePizzaDeBrest
class FabriqueDePizzaDeStrasbourg [[java:tp3.FabriqueDePizzaDeStrasbourg]] {
	~{static}FabriqueDePizzaDeStrasbourg instance
	+{static}FabriqueDePizzaDeStrasbourg getInstance()
	+Pizza creerPizza(String type)
}
abstract class FabriqueDePizza [[java:tp3.FabriqueDePizza]] {
}
FabriqueDePizza <|-- FabriqueDePizzaDeStrasbourg
class FabriqueDePizzeria [[java:tp3.FabriqueDePizzeria]] {
	~{static}FabriqueDePizzeria instance
	+{static}FabriqueDePizzeria getInstance()
	+Pizzeria creer(String type)
}
abstract class Pizza [[java:tp3.Pizza]] {
	#String nom
	#String pate
	#String sauce
	#ArrayList<String> garnitures
	#Pizza()
	#void preparer()
	#void cuire()
	#void couper()
	#void emballer()
	#String getNom()
}
class PizzaFromageStyleBrest [[java:tp3.PizzaFromageStyleBrest]] {
	+PizzaFromageStyleBrest()
	#void couper()
}
abstract class Pizza [[java:tp3.Pizza]] {
}
Pizza <|-- PizzaFromageStyleBrest
class PizzaFromageStyleStrasbourg [[java:tp3.PizzaFromageStyleStrasbourg]] {
	+PizzaFromageStyleStrasbourg()
	#void couper()
}
abstract class Pizza [[java:tp3.Pizza]] {
}
Pizza <|-- PizzaFromageStyleStrasbourg
class PizzaGrecStyleBrest [[java:tp3.PizzaGrecStyleBrest]] {
	+PizzaGrecStyleBrest()
	#void couper()
}
abstract class Pizza [[java:tp3.Pizza]] {
}
Pizza <|-- PizzaGrecStyleBrest
class PizzaGrecStyleStrasbourg [[java:tp3.PizzaGrecStyleStrasbourg]] {
	+PizzaGrecStyleStrasbourg()
	#void couper()
}
abstract class Pizza [[java:tp3.Pizza]] {
}
Pizza <|-- PizzaGrecStyleStrasbourg
class PizzaPoivronStyleBrest [[java:tp3.PizzaPoivronStyleBrest]] {
	+PizzaPoivronStyleBrest()
	#void couper()
}
abstract class Pizza [[java:tp3.Pizza]] {
}
Pizza <|-- PizzaPoivronStyleBrest
class PizzaPoivronStyleStrasbourg [[java:tp3.PizzaPoivronStyleStrasbourg]] {
	+PizzaPoivronStyleStrasbourg()
	#void couper()
}
abstract class Pizza [[java:tp3.Pizza]] {
}
Pizza <|-- PizzaPoivronStyleStrasbourg
<<<<<<< HEAD
abstract class Pizzeria [[java:tp3.Pizzeria]] {
	#Pizza commanderPizza(String string)
}
abstract class FabriqueDePizza [[java:tp3.FabriqueDePizza]] {
}
Pizzeria --> "1" FabriqueDePizza : FabriqueDePizza
class PizzeriaDeBrest [[java:tp3.PizzeriaDeBrest]] {
	+PizzeriaDeBrest()
}
abstract class Pizzeria [[java:tp3.Pizzeria]] {
}
Pizzeria <|-- PizzeriaDeBrest
class PizzeriaDeStrasbourg [[java:tp3.PizzeriaDeStrasbourg]] {
	+PizzeriaDeStrasbourg()
}
abstract class Pizzeria [[java:tp3.Pizzeria]] {
}
Pizzeria <|-- PizzeriaDeStrasbourg
@enduml
=======

@enduml
>>>>>>> bc031d5573e9a6658fe59d586e0baeccd06fcc25
